--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -244,6 +244,19 @@
   PBNews.61.d:0 "This morning the Russian delegation officially responded to claims regarding the Tsar's death. Confirming suspicions of his untimely demise to Epidemic Typhus: the disease that took the lives of many during the Great War and who now has claimed another, that being the head of the Russian Empire. Tsar Nicholas II.\n\nThe nation was already experiencing dangerous amounts of turmoil though it seems this suprise death has only elevated the situation. The Russain Duma has proclaimed temporary control until an official successor could be named."
   PBNews.61.a:0 "Another Monarch Dead"
 
+  PBNews.62.t:0 "Pytor Assumes Russian Leadership"
+  PBNews.62.d:0 "As Russia continues to decay a new situation has developed. Pytor Wrangel, a Great War veteran and head of the Okhrana has taken power and dissolved the Duma.\n\nSpecifics aren't clear but it is said that various brigades loyal to him surrounded the Duma with a simple request towards it's inhabitants, vacate the building and make room for Russia's new leader. It is said that majority followed suite with the orders but the few that refused were beaten bloodily and till death. Now Russia's political situation has reached a stand still and all Europe can do is simply wait and watch to see what unfolds."
+  PBNews.62.a:0 "Just Another Tyrant"
+
+  PBNews.63.t:0 "A Dark Cloud Over Eurasia"
+  PBNews.63.d:0 "As Russia continues to decay a new situation has developed. Numerous rumours have circulated that the Russian state is now officially a theocracy. It is said that there in no direct head of government but, instead, a collection of Russia's highest ranking clergy leads the crippling state. Their politcal motives remain largely unknown though what is said to be true is that the same hatred that the Tsar shared for Britian and Germany is also present. This is the first time the world has ever beared witness to a nation of Russia's size as a theocracy. All watch with eager eyes to see what unfolds from this situation and so forth."
+  PBNews.63.a:0 "Dear Lord"
+
+  PBNews.64.t:0 "Russia Joins The Pacte Revanchiste"
+  PBNews.64.d:0 "Russia and it's subjects have officially joined the Pacte Revanchiste. While this wasn't a surprise as ties between the nations have recently warmed up during the approaching weeks. All previous Great War hostilities have seemed to be forgotten in light of a new age of friendship and cooperation.\n\nThe truth quite simply is that Russia needed a nation to aid them in their eventual showdown with Britian and Germany and who better than the resurgent French who to seem to be on a similar warpath with Russia's rivals. Both Germany and Britian have refused to comment on the matter."
+  PBNews.64.a:0 "Everyday They Get Stronger"
+
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
