--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -8,7 +8,7 @@
   ##########################
   # MINISTERS/LEADERS
   ##########################
-  POLITICS_Emergency_Duma_DESC:0 "§YTemporary Leadership§!\n\n§YUnpopular Oligarchs§!\n\nWith the Tsar dead and no direct claimants of suitable age to take the throne it is unsurprising to say the Duma has assumed responsibility of leading the nation, even if temporary. Riots are numerous, public gatherings are large, and the air is thick with unrest. If a succesor isn't named, legaly or not, all hell will soon break loose."
+  POLITICS_Emergency_Duma_DESC:0 "§YTemporary Leadership§!\n\nWith the Tsar dead and no direct claimants of suitable age to take the throne it is unsurprising to say the Duma has assumed responsibility of leading the nation, even if temporary. Riots are numerous, public gatherings are large, and the air is thick with unrest. If a succesor isn't named, legaly or not, all hell will soon break loose."
   
 
   ##########################
@@ -70,6 +70,7 @@
   PB_RUS_Slavic_Diaspora2:0 "The Slavic Diaspora"
   PB_RUS_German_Labour_Camps:0 "German Labour Camps"
   PB_RUS_German_Labour_Camps2:0 "German Labour Camps"
+  PB_RUS_A_State_Under_Construction4:0 "The Police State"
 
   ##########Ideas For The Russian Collapse##########
 
@@ -82,12 +83,12 @@
   PB_RUS_Anarchy:0 "Anarchy"
 
   ##########################
-  # TRAITS
+  # TRAITS \ LEADERS
   ##########################
 
   PB_Lost_Son:0 "The Lost Tsarevich"
   POLITICS_Nicholas_II_DESC:0 "§YBorn:§!18/3/1868\n\n§YTsar Nicholas§! II has lost all hope and lust for life. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies.\n\nAs a result the political situation of the Russian Empire is unstable and weak and a simple flick could collapse the entire nation into degeneracy. Russia needs a strong, confident, and ambitious leader if she is to remain united, and feared.\n\nThe harshest of days are ahead for Russia and one wrong step will spell the end of the so called "§YEmpire Of The Slavs§!"\n\n§RThe German and British dogs will pay the ultimate price for their actions§!"
-  POLITICS_Pyotr_Wrangel_DESC:0 "§YBorn:§!27/7/1878\n\nA devout Orthodoxian and Neo-Imperialist preacher makes §YPyotr Wrangel§! one of if not the most terrifying individuals to call the Russian colossus home. With the Tsar dead and the Okhrana's position secured as the de-facto leading governemnt there is no telling what this mad man has in plan for Europe, especially the two old orders that are Britian and Germany."
+  POLITICS_Pyotr_Wrangel_DESC:0 "§YBorn:§!27/7/1878\n\nA devout Orthodoxian and Neo-Imperialist preacher makes §YPyotr Wrangel§! one of if not the most terrifying individuals to call the Russian colossus home. With the §YTsar§! dead and the Okhrana's position secured as the de-facto leading governemnt there is no telling what this mad man has in plan for Europe, especially the two old orders that are Britian and Germany.\n\nA Great War veteran has garnered §YWrangel§! a comfortable collection of friends in high places and a strong connection with the military. His previous record of being head of the Okhrana has also alleviated his political situation and all seems well in the higher echelons of Russian society as a result.\n\n§RThe German and British dogs will pay the ultimate price for their actions§!"
   PB_Okhrana_Connections:0 "Okhrana Connections"
 
   ##########################
@@ -431,6 +432,15 @@
   russia96title:0 "The Administration Is Over"
   russia96desc:0 ""
   russia96opta:0 "For Russia!"
+  russia97title:0 "Pytor Takes Power"
+  russia97desc:0 ""
+  russia97opta:0 "A New Leader, A New Russia"
+  russia98title:0 "Religious Fanatics Take Power"
+  russia98desc:0 ""
+  russia98opta:0 "A New Leader, A New Russia"
+  russia99title:0 "The Police State"
+  russia99desc:0 ""
+  russia99opta:0 "Long Live Russia!"
   ##########################
   # TOOLTIPS n Shit
   ##########################  
@@ -537,6 +547,22 @@
   russia66tooltip:0 "If Religious Fervour Is At Less Than §Y100%§! Then Religious Fervour Will Largely §RDecrease§! And Some Debuffs Will Be Granted\n\nIf Religious Fervour Is At §Y100%§! Then Religious Fervour Will Be Set Back To §Y50%§! And All Debuffs Will Be Avoided\n\n§R--This Applies Every Year--§!"
   PB_RUS_Increase_Fervour:0 "A Decision Isn't Currently Active Or Religious Fervour Isn't At §Y100%§!"
   russia67tooltip:0 "§W--------------§!\nIf Russia Or The Berlin Administration Owns Schleswig-Holstein Forts Will Also Be Built There"
+  russia68tooltip:0 "§W--------------§!\nWrangel Will Save Russia From Its Greatest Enemy; Its Self"
+  russia69tooltip:0 "§W--------------§!\nIf Portugal Accepts Somalia Will Be Transfered To Eritrea - Russian East Africa" 
+  russia70tooltip:0 "§W--------------§!\nThe Divine Will Save Russia From Its Greatest Enemy; Non-believers"
+  russia71tooltip:0 "Russia Will Henceforth Be Known As The §YEurasian Holy Order§!"
+  russia72tooltip:0 "The §YDivinity§! Focus Tree Will Be Unlocked"
+  RUS_HOLY:0 "Eurasian Holy Order"
+  russkaya_monasheskaya_teokratiya:0 "Monasheskaya Teokratiya"
+  RUS_russkaya_monasheskaya_teokratiya:0 "Russkaya Monasheskaya Teokratiya"
+  russia73tooltip:0 "Russia Will Henceforth Be Known As The §YRussian Imperiya§!"
+  russia74tooltip:0 "The §YPurpose§! Focus Tree Will Be Unlocked"
+  neoimperialisticheskaya_partiya:0 "Neo-Imperialisticheskaya Partiya"
+  RUS_neoimperialisticheskaya_partiya:0 "Rossiyskaya Neo-Imperialisticheskaya Partiya"
+  russia75tooltip:0 "The Loyalists Will §RGain§! Power"
+  russia76tooltip:0 "The Loyalists Will §GLose§! Power"
+  russia77tooltip:0 "The Reformists Will §RGain§! Power"
+  russia78tooltip:0 "The Reformists Will §GLose§! Power"
   ########################## 
   # FOCUS
   ##########################
