--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -6,10 +6,19 @@
   RUS_Country_Desc_Topbar:0 "§YRussia§! is the undisputed hegemony in Eurasia in 1933.\n\nRussia has by far seen better days. Though a victor of the Great War this has ultimately amounted into minor gains in the form of territorial expansions. Unlike the then once believed idea that the war was some how going to fix the Russian bear's issues, this was false and folly.\n\n The incompetent Tsar as a result had retreated into a life of solitude, blaming all his failures on his once considered allies. Though there is still hope for the Russian people, With the Tsar now slowly dying a painiful death the political sphere has begun to shift, everyday a figure of great importance to the Tsar goes missing, a position in government is changed, and one less loyal individual gains power. All know what the outcome will be for the Tsar in the coming days, alive or not.\n\nTime will tell if Russia will once again ascend into glory or fall and crumble like many have before her.\n\nRussia is a §YMajor Power§!."
 
   ##########################
-  # MINISTERS/LEADERS
+  # MINISTERS/LEADERS/Traits
   ##########################
   POLITICS_Emergency_Duma_DESC:0 "§YTemporary Leadership§!\n\nWith the Tsar dead and no direct claimants of suitable age to take the throne it is unsurprising to say the Duma has assumed responsibility of leading the nation, even if temporary. Riots are numerous, public gatherings are large, and the air is thick with unrest. If a succesor isn't named, legaly or not, all hell will soon break loose."
-  
+  PB_Lost_Son:0 "The Lost Tsarevich"
+  POLITICS_Nicholas_II_DESC:0 "§YBorn:§!18/3/1868\n\n§YTsar Nicholas§! II has lost all hope and lust for life. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies.\n\nAs a result the political situation of the Russian Empire is unstable and weak and a simple flick could collapse the entire nation into degeneracy. Russia needs a strong, confident, and ambitious leader if she is to remain united, and feared.\n\nThe harshest of days are ahead for Russia and one wrong step will spell the end of the so called "§YEmpire Of The Slavs§!"\n\n§RThe German and British dogs will pay the ultimate price for their actions§!"
+  POLITICS_Pyotr_Wrangel_DESC:0 "§YBorn:§!27/7/1878\n\nA devout Orthodoxian and Neo-Imperialist preacher makes §YPyotr Wrangel§! one of if not the most terrifying individuals to call the Russian colossus home. With the §YTsar§! dead and the Okhrana's position secured as the de-facto leading governemnt there is no telling what this mad man has in plan for Europe, especially the two old orders that are Britian and Germany.\n\nA Great War veteran has garnered §YWrangel§! a comfortable collection of friends in high places and a strong connection with the military. His previous record of being head of the Okhrana has also alleviated his political situation and all seems well in the higher echelons of Russian society as a result.\n\n§RThe German and British dogs will pay the ultimate price for their actions§!"
+  PB_Okhrana_Connections:0 "Okhrana Connections"
+  RUS_Chubar:0 "Vlas Chubar"
+  RUS_Matskevich:0 "Vladimir Matskevich"
+  RUS_Ponomanrenko:0 "Panteleimon Ponomarenko"
+  RUS_Zverev:0 "Arseny Zverev"
+  RUS_Fyodorovich:0 "Anatoly Dobrynin"
+  RUS_Kosygin:0 "Alexei Kosygin"
 
   ##########################
   # IDEAS
@@ -81,15 +90,6 @@
   PB_RUS_Russian_Civil_War:0 "The Russian Civil War"
   PB_RUS_Airlift:0 "Resupplied By Air"
   PB_RUS_Anarchy:0 "Anarchy"
-
-  ##########################
-  # TRAITS \ LEADERS
-  ##########################
-
-  PB_Lost_Son:0 "The Lost Tsarevich"
-  POLITICS_Nicholas_II_DESC:0 "§YBorn:§!18/3/1868\n\n§YTsar Nicholas§! II has lost all hope and lust for life. Nicholas spends his days resting Vacant and Broken on the Imperial Throne letting his court and country decay apart from his seething hatred for his former allies who he blames for all his tragedies.\n\nAs a result the political situation of the Russian Empire is unstable and weak and a simple flick could collapse the entire nation into degeneracy. Russia needs a strong, confident, and ambitious leader if she is to remain united, and feared.\n\nThe harshest of days are ahead for Russia and one wrong step will spell the end of the so called "§YEmpire Of The Slavs§!"\n\n§RThe German and British dogs will pay the ultimate price for their actions§!"
-  POLITICS_Pyotr_Wrangel_DESC:0 "§YBorn:§!27/7/1878\n\nA devout Orthodoxian and Neo-Imperialist preacher makes §YPyotr Wrangel§! one of if not the most terrifying individuals to call the Russian colossus home. With the §YTsar§! dead and the Okhrana's position secured as the de-facto leading governemnt there is no telling what this mad man has in plan for Europe, especially the two old orders that are Britian and Germany.\n\nA Great War veteran has garnered §YWrangel§! a comfortable collection of friends in high places and a strong connection with the military. His previous record of being head of the Okhrana has also alleviated his political situation and all seems well in the higher echelons of Russian society as a result.\n\n§RThe German and British dogs will pay the ultimate price for their actions§!"
-  PB_Okhrana_Connections:0 "Okhrana Connections"
 
   ##########################
   # DECISIONS
@@ -332,11 +332,8 @@
   russia65desc:0 ""
   russia65opta:0 "What Will Happen Now?"
   russia66title:0 "The Moscow Riots"
-  russia66desc:0 ""
-  russia66opta:0 "Pytor And His Disciples Storm The Duma"
-  russia66optb:0 "Kolchak And His Cronies Storm The Duma"
-  russia66optc:0 "The Cult And Their Divine Followers Storm The Duma"
-  russia66optd:0 "Anastasy And The Military Storm The Duma"
+  russia66desc:0 "With every passing minute a new sound unheard from the collection of screams would rise to the highest frequency. Rape and murder were the victims to these crimes and little did anyone care for them. With the stage set and the world on fire the streets blew up into a cascade of rage as mobs stormed street side stores, burned local infrastructure, and proclamied new deities.\n\nHumanity had returned to the dark ages. "
+  russia66opta:0 "Everyone Calm Down"
   russia67title:0 "An Ending At Midnight"
   russia67desc:0 ""
   russia67opta:0 "Lord Have Mercy"
@@ -441,6 +438,42 @@
   russia99title:0 "The Police State"
   russia99desc:0 ""
   russia99opta:0 "Long Live Russia!"
+  russia100title:0 "As Low As It Gets"
+  russia100desc:0 "Moscow laid buried in ruins amassed with mixtures of rubble and dirt and it was a sure sign that the end times for the Duma were near. The local police forces and garrison did much to calm the masses though one can only do some much to relax and enraged bull. These were the quiet hours, when the beasts slept, for the time being a small gasp of air could be caught until the very next morning when it would all start over again."
+  russia100opta:0 "Send The Military"
+  russia100optb:0 "Hold Off For Now"
+  russia101title:0 "Like Rats"
+  russia101desc:0 "It was said in the local newspaper, those that still were operating that is, that a child no older than four went missing last night during the chaos. The child was identified to be the son of a local buisness man. It is said that the child was last seen with a group of reactionaries before his untimely disappearance. Some have said the child was raped though no concrete evidence has been provided yet, though that did little to calm the streets, which at this point had turned into a political battleground between local reactionaries and liberals. The military have offered to open fire on the horde in a final hail mary, they have warned us that some "innocents" may be caught in the cross fire."
+  russia101opta:0 "Fucking Shoot Them!"
+  russia101optb:0 "Let It Fester"
+  russia102title:0 "Civilian Checkpoints"
+  russia102desc:0 "With the situation still deteriorating in Moscow, and now spreading in other cities the local populaces have begun proclaiming rogue militia groups. Cordinating their efforts to cut entire sections of the cities off in a show of rebellion. Some have announced the creation of communal districts free of authority, an obvious sign of radicalism no doubt. While the military is desperately trying to calm the situation it all truely seems worthless as every day the protests get larger and more volatile."
+  russia102opta:0 "Local Militias? Whats Next?"
+  russia103title:0 "Bodies, Bodies, Bodies"
+  russia103desc:0 "The boots that the brigades wore were soaked ankle high in a viscous mixture of blood and dirt, staining the "premium" leather used to make the soliders look presentable. A feature that was devoid during and after the chaos. Mothers screamed for their sons whilst the pinging ring of empty shells grew noticable, it was a terrible time for a family outing. Those that were spared from the rattling steel would live their nightmares a thousand years over, a violent loop of terror.\n\nAnd when the sound of war finally deafend, all that was left were bodies. Bodies, bodies, bodies."
+  russia103opta:0 "We Fucked Up, Didn't We?"
+  russia104title:0 "A Surprise Visit"
+  russia104desc:0 "Kolchak, head of the Imperial Navy and local administrator for Arkhangelsk has given the duma a life line. Give him full dictitorial powers and a substantial amount of the cities garrison and in return he promises to restore peace and maintain order untill the Moscow riots are over. When Kolchak provided his request the entire conference room imploded in laughter, then chuckles, then silence. "Are you serious?" Proclaimed a hidden figure in the crowd. Kolchak grew a small grin, "Dead serious" and with that he negotiated his way to the exit, leaving the conference room with his cronies. The atmosphere turned into a battle of stares and confusion as everyone pondered on the idea. "
+  russia104opta:0 "We Will Think About It" 
+  russia104optb:0 "Anything To Fix This Mess"
+  russia105title:0 "A Knock On The Front Door"
+  russia105desc:0 ""By direct order of Pyotr Wrangel, Grand Marshal of the Russian Empire and divine ruler of all slavs, everyone in this room is to leave at once. You have fifteen minutes to do so. Any that refuse will be shot and burnt with your ashes returned to your respected families." Then the announcer crumbled the small note he held in his right palm and directly stared into the many glaring eyes that saturated the room. "Me and my men will not hesitate, that is a promise." The entire room's life vanished with the announcers final words and a stampede of overweight, blabbering men rushed for the exit doors."
+  russia105opta:0 "So Much For Loyalty"
+  russia106title:0 "In God We Trust"
+  russia106desc:0 "A small and insignificant cloaked figure stood on the makeshift podium that the mob had constructed. The crowd for once calmed, and gathered to listen to the preachers words, with every sentence they grew more loyal and interested till they had heard enough. Then the crowd dispersed, rushing various military holdouts with nothing but sheer will. It was a violent show of savage cruelty. Every holdout begun to collapse under the weight of numerous civilians and military defectors storming the streets in a show of religious fervour. The Duma was the last of these locations and it stood as the only buidling defiant to the crowd. The soliders that witnessed the human mass didn't even bother to put up a final defense, it was already over. But the soliders were of no interest to the mob, the oligarchs were, those fat greasy pigs as the crowd called them, and all one could see with the naked eye was a collection of individuals storming the Duma where screams were heard from all throughout the night."
+  russia106opta:0 "What The..."
+  russia106optb:0 "How The..."
+  russia106optc:0 "Why The..."
+  russia107title:0 "Have You Ever Seen Hell?"
+  russia107desc:0 ""
+  russia107opta:0 "Not Till Now"
+  russia108title:0 "Sanity In An Insane Place"
+  russia108desc:0 ""
+  russia108opta:0 "Its All Down Hill From Here" 
+  russia109title:0 "Ready When You Are"
+  russia109desc:0 ""
+  russia109opta:0 "Goodluck And Goodbye"
+
   ##########################
   # TOOLTIPS n Shit
   ##########################  
