First Turkey commit and don't forget brackets :gun:

--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -1,8 +1,61 @@
 ﻿l_english:
+  ##########################
+  # PARTIES
+  ##########################
+  TUR_jc_party:0 "Türk Devrimci Cephesi - Radikaller"
+  TUR_jc_party_long:0 "The Turkish Revolutionary Front - Radicals"
+  TUR_ss_party:0 "Türk Devrimci Cephesi - Ilımlılar"
+  TUR_ss_party_long:0 "The Turkish Revolutionary Front - Moderates"
+  TUR_lb_party:0 "Serbest Cumhuriyet Fırkası"
+  TUR_lb_party_long:0 "The Liberal Republic Party"
+  TUR_cn_party:0 "Ulusal Demokratlar"
+  TUR_cn_party_long:0 "The National Democrats"
+  TUR_rc_party:0 "Türk cephesi"
+  TUR_rc_party_long:0 "The Turkish front"
+  TUR_an_party:0 "Özgürlük ve Uyum Partisi"
+  TUR_an_party_long:0 "The Freedom and Accord Party"
+  TUR_ds_party:0 "İmparatorluk Grubu"
+  TUR_ds_party_long:0 "The Imperial Clique"
+  TUR_ni_party:0 "Turanist Ligi"
+  TUR_ni_party_long:0 "The Turanist League"
+
+  ##########################
+  # PARTIES
+  ##########################
+  TUR_ni:0 "Ottoman Empire"
+  TUR_ni_DEF:0 "The Ottoman Empire"
+  TUR_ds:0 "Ottoman Empire"
+  TUR_ds_DEF:0 "The Ottoman Empire"
+  TUR_rc:0 "Ottoman Empire"
+  TUR_rc_DEF:0 "The Ottoman Empire"
+  TUR_an:0 "Turkey"
+  TUR_an_DEF:0 "The Republic of Turkey"
+  TUR_cn:0 "Turkey"
+  TUR_cn_DEF:0 "The Republic of Turkey"
+  TUR_lb:0 "Turkey"
+  TUR_lb_DEF:0 "The Republic of Turkey"
+  TUR_ss:0 "Ottoman Empire"
+  TUR_ss_DEF:0 "The Ottoman Empire"
+  TUR_jc:0 "Turkish Republic"
+  TUR_jc_DEF:0 "Turkish Republic"
+  TUR_ni_ADJ:0 "Turkish"
+  TUR_rc_ADJ:0 "Turkish"
+  TUR_lb_ADJ:0 "Turkish"
+  TUR_ss_ADJ:0 "Turkish"
+  TUR_jc_ADJ:0 "Turkish"
+  TUR_ds_ADJ:0 "Turkish"
+  TUR_cn_ADJ:0 "Turkish"
+  TUR_an_ADJ:0 "Turkish"
 
   ##########################
   # MINISTERS
   ##########################
+  TUR_PB_Ahmed_HOG:0 "Ahmed Izzet Pasha"
+  TUR_PB_Hasan_Fehmi:0 "Hasan 'Ataç' Fehmi"
+  TUR_PB_Tevfik_Aras:0 "Tevfik Rüştü Aras"
+  TUR_PB_kaya:0 "Şükrü Kaya"
+  TUR_PB_Kemal:0 "Kemal Atatürk"
+
 
 
   ##########################
