--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -144,7 +144,20 @@
   RUS_Build_Churces:0 "Build Churches"
   RUS_Spread_Orthodoxism:0 "Spread Orthodoxism"
   RUS_Liberal_Agitation:0 "Liberal Agitation"
-
+  PB_RUS_Moscow_Riots:0 "The Moscow Riots"
+  PB_RUS_Moscow_Riots_desc:0 "\n\n\n\n\n\nThe Moscow Riots are a collection of violent protests that while first originating in Moscow, aren't limited to it, but instead named to universally describe the chaos that unfolded in the russian industrial complexes of Moscow, Petrograd, and Tsaritsyn.\n\nNow a game of cat and mouse plays out, with the local garrison trying to quell the unrest with sheer brutality whilst the local liberal-jacobins try to establish communal districts. Its a violent war on the streets and in politics and many are going to die.\n\nBoy is Russia a mess.\n\nThe presence of the Moscow Jacobins is at §Y[?RUS.Moscow_Jacobin]%§!\n\nTheir revolt power is at §Y[?RUS.Moscow_Jacobin_Revolt]%§!\n\nIf any of these variables reach past §Y90%§! a revolt will ensue."
+  RUS_shoot_the_agitators:0 "Shoot The Agitators"
+  RUS_raid_cell:0 "Raid Jacobin-Liberal Cells"
+  RUS_assassinate_jacobin_leader:0 "Assassinate A Jacobin Preacher"
+  RUS_burn_communes:0 "Burn Communes"
+  RUS_escalate_street_fighting:0 "Escalate Street Fighting"
+  RUS_Jacobin_Maneuvers:0 "Jacobin Maneuvers"
+  RUS_Jacobin_Maneuvers_desc:0 "The Jacobin-Liberals are making moves to increase their influence and strength. We cannot let this go unchallenged and must restore order, no matter the cost."
+  RUS_the_final_battle:0 "The Final Battle"
+  RUS_Destined_To_Revolt:0 "Destined To Revolt"
+  RUS_Destined_To_Revolt_desc:0 "It is too late. We have failed to control the Moscow Jacobins and as a result the city is lost, it seems the only option now is all out war with the reds"
+  RUS_No_Progress_In_Moscow:0 "No Progress In Moscow"
+  RUS_No_Progress_In_Moscow_desc:0 "If we cannot deal with the Moscow Riots before the end of the year it is likely that they will revolt."
   ##########################
   # EVENTS
   ##########################
@@ -473,6 +486,27 @@
   russia109title:0 "Ready When You Are"
   russia109desc:0 ""
   russia109opta:0 "Goodluck And Goodbye"
+  russia110title:0 "Open Fire"
+  russia110desc:0 ""
+  russia110opta:0 "They Should Have Listened"
+  russia111title:0 "Jacobin Cell Raided"
+  russia111desc:0 ""
+  russia111opta:0 "Guns, Guns, Guns"
+  russia112title:0 "Local Jacobin Leader Shot Dead"
+  russia112desc:0 ""
+  russia112opta:0 "Bullseye"
+  russia113title:0 "Communal District Destroyed"
+  russia113desc:0 ""
+  russia113opta:0 "Its Too Easy"
+  russia114title:0 "Brutality At Its Finest"
+  russia114desc:0 ""
+  russia114opta:0 "What A Show"
+  russia115title:0 "The Battle For Moscow"
+  russia115desc:0 ""
+  russia115opta:0 "Death To The Jacobins!"
+  russia116title:0 "The Fall Of Moscow"
+  russia116desc:0 ""
+  russia116opta:0 "Death To The Jacobins!"
 
   ##########################
   # TOOLTIPS n Shit
@@ -596,6 +630,17 @@
   russia76tooltip:0 "The Loyalists Will §GLose§! Power"
   russia77tooltip:0 "The Reformists Will §RGain§! Power"
   russia78tooltip:0 "The Reformists Will §GLose§! Power"
+  russia79tooltip:0 "The Moscow Jacobins presence will decrease by §G5%§!"
+  russia80tooltip:0 "The Moscow Jacobins presence will decrease by §G2%§! and will lose §G2%§! revolt power"
+  russia81tooltip:0 "The Moscow Jacobins presence will decrease by §G8%§!"
+  russia82tooltip:0 "The Moscow Jacobins revolt power will decrease by §G8%§!"
+  russia83tooltip:0 "The Moscow Jacobins revolt power and presence will decrease by §G5%§!"
+  RUS_No_Fail:0 "The Riots Have Been Calmed"
+  russia84tooltip:0 "The Moscow Jacobins revolt power and presence will increase by §R5%§!" 
+  russia85tooltip:0 "The Moscow Jacobins will be defeated"
+  russia86tooltip:0 "Moscow will fall to Jacobin hands and the only way to reclaim it will be through war"
+  RUS_Moscow_Riots:0 "The Moscow Riots Have Started"
+  MOS_JAC:0 "Moscow Jacobins"
   ########################## 
   # FOCUS
   ##########################
