more Turkey setup and more bracket fixing

--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -69,9 +69,40 @@
   PB_TUR_Economic_Collapse_desc:0 "The Ottoman economy has been in a state of near total collapse for years, thanks in part to the global economic downturn and the mismanagement of the Arab revolt. Foreign investment is nonexistent, and very few can afford anything beyond the most basic necessities"
   PB_TUR_Caliph_of_Islam:0 "The Caliph of Islam"
   PB_TUR_Caliph_of_Islam_desc:0 "Despite a myriad of social, economic and political problems, the Ottoman Caliph still remains the de-facto head of the Islamic faith. This legitimacy is one of the few sinews holding Turkish society together, however the Ottoman loss of the Islamic holy sites in Arabia was a massive blow to the religious legitimacy of the Caliph. It is not uncommon for many Muslims abroad to look to Istanbul for guidance, but many have begun to turn their attention towards those who hold Mecca, the Arabians."
+  PB_TUR_istanbul_riots:0 "The Istanbul Riots"
   PB_TUR_Turkish_Civil_War:0 "The Turkish Civil War"
   PB_TUR_Turkish_Civil_War_Recovery:0 "Recovering from the Civil War"
 
+  ##########################
+  # FOCUSES
+  ##########################
+  # Inital Tree
+  TUR_dictatorship_of_ahmed_izzet_pasha:0 "The Dictatorship of Ahmed Izzet Pasha"
+  TUR_commence_the_repairs:0 "Commence The Recouperation"
+  TUR_the_ottoman_shield:0 "The Ottoman Shield"
+  TUR_the_protege:0 "The Protégé"
+  TUR_observe_the_north:0 "Observe The North"
+  TUR_call_the_meeting:0 "Call The Meeting"
+  TUR_secure_the_borders:0 "Secure The Borders"
+  TUR_secure_the_interior:0 "Secure The Interior"
+  TUR_a_war_masters_touch:0 "A War Master's Touch"
+  TUR_the_five_year_plan:0 "The Five Year Plan"
+  TUR_commence_preperations:0 "Commence Preperations"
+  TUR_connect_the_empire:0 "Connect The Empire"
+  TUR_placiate_the_left:0 "Placiate The Left"
+  TUR_nobody_left_behind:0 "Nobody Left Behind"
+  TUR_commence_the_plan:0 "Commence The Plan"
+  TUR_hope_it_works:0 "Hope it Works"
+  TUR_address_istanbul:0 "Address Istanbul..."
+  TUR_with_no_mercy:0 "With No Mercy"
+  TUR_no_mercy_for_the_left:0 "No Mercy For The Left"
+  TUR_rebuild_property:0 "Rebuild Property"
+  TUR_we_are_heroes:0 "We Are Heroes"
+  TUR_with_mercy:0 "With Mercy"
+  TUR_diplomats_tact:0 "A Diplmoat's Tact"
+  TUR_encourge_rapprochement:0 "Encourge Rapprochement..."
+  TUR_with_golden_dagger:0 "With A Golden Dagger"
+  TUR_calmer_instanbul:0 "A Calmer Instanbul"
   ##########################
   # EVENTS
   ##########################
@@ -129,3 +160,8 @@
   OTT_Turkish_Civil_War_tooltip:0 "§YYou will remain as the Ottoman Empire§!\n\n"
   NTR_Turkish_Civil_War_tooltip:0 "§YYou will switch to Nationalist Turkey§!\n\n"
   RTR_Turkish_Civil_War_tooltip:0 "§YYou will switch to Revolutionary Turkey§!\n\n"
+
+  ##########################
+  # FLAGS
+  ##########################
+  TUR_izzet_dying_bro:0 " §RA Crisis is occuring§!"
