--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -256,6 +256,10 @@
   PBNews.64.d:0 "Russia and it's subjects have officially joined the Pacte Revanchiste. Ties between the nations have recently warmed up during the approaching weeks and it seems all previous Great War hostilities have seemed to be forgotten in light of a new age of friendship and cooperation.\n\nThe truth quite simply is that Russia needed a nation to aid them in their eventual showdown with Britian and Germany and who better than the resurgent French who to seem to be on a similar warpath with Russia's rivals. Both Germany and Britian have refused to comment on the matter."
   PBNews.64.a:0 "Everyday They Get Stronger"
 
+  PBNews.65.t:0 "The Moscow Riots"
+  PBNews.65.d:0 ""
+  PBNews.65.a:0 "Russia Continues To Burn"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
