More Turkey innit

--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -95,9 +95,9 @@
   TUR_hope_it_works:0 "Hope it Works"
   TUR_address_istanbul:0 "Address Istanbul..."
   TUR_with_no_mercy:0 "With No Mercy"
-  TUR_no_mercy_for_the_left:0 "No Mercy For The Left"
-  TUR_rebuild_property:0 "Rebuild Property"
-  TUR_we_are_heroes:0 "We Are Heroes"
+  TUR_no_mercy_for_the_left:0 "Destory This Farce"
+  TUR_rebuild_property:0 "Rebuild Damaged Property"
+  TUR_we_are_heroes:0 "We Are The Heroes"
   TUR_with_mercy:0 "With Mercy"
   TUR_diplomats_tact:0 "A Diplmoat's Tact"
   TUR_encourge_rapprochement:0 "Encourge Rapprochement..."
@@ -110,6 +110,15 @@
   turkey_inital.1.a:0 "For Turkey!"
   turkey_inital.2.t:0 "Forming The Taskforce"
   turkey_inital.2.a:0 "Soon the people will live like they once did."
+  turkey_inital.3.t:0 "Observing the Torun"
+  turkey_inital.3.a:0 "Peace at Home, Peace in the World."
+  turkey_inital.4.t:0 "The Protégé"
+  turkey_inital.4.a:0 "'Turkey will live on even without you, Teacher.'"
+  turkey_inital.5.t:0 "The Doctrinal Debate"
+  turkey_inital.5.a:0 "Throwing Shells will keep our men safe."
+  turkey_inital.5.b:0 "Only a Grand Statergy will keep our men safe."
+  turkey_inital.5.c:0 "We can only overwhelm the enemy with numbers."
+  turkey_inital.5.e:0 "Metal and blood will keep us going."
   turkey.1.t:0 "The Death of Izzet Pasha"
   turkey.1.d:0 "Ahmed Izzet Pasha, the dictator of the Ottoman Empire and head of the military junta since 1925, was found dead in his office this morning. Pasha's legacy is a controversial one, with his choice to overthrow the civilian government eight years ago has been both supported and criticized. The Pasha Junta's decision to seek terms with the United Arab Emirates marked the official end of the Ottoman Empire as the hegemony of the Middle East. For many, the collapse of Ottoman rule has been a near constant downward spiral only exacerbated by the end of what tepid democracy the Empire had.\n\nWith Pasha's death, the last tenuous thread holding the Empire together has been cut. What would be an unremarkable state funeral under normal cirucumstances has become a moment of genuine grief and uncertainty amongst the populace. Reports have already begun to reach the Sublime Porte of Jacobin riots on the coast, while Armenian and Kurdish partisans have begun organizing the inevitable breakdown of civil authority. The military has thus far remained silent, but this has engendered even more concern as it is widely believed the junta will make a move to retain power at any cost."
   turkey.1.a:0 "The Empire trembles..."
@@ -162,6 +171,7 @@
   # TOOLTIPS
   ##########################
   TUR_commence_slump_stuff:0 "§YDecsions will be unlocked that will allow us to respond to the economic crisis.§!"
+  TUR_secure_the_borders_tt:0 "§YBunkers will be constructed all around our borders.§!"
   OTT_Turkish_Civil_War_tooltip:0 "§YYou will remain as the Ottoman Empire§!\n\n"
   NTR_Turkish_Civil_War_tooltip:0 "§YYou will switch to Nationalist Turkey§!\n\n"
   RTR_Turkish_Civil_War_tooltip:0 "§YYou will switch to Revolutionary Turkey§!\n\n"
